# datathon_fase_05

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  prometheus.yaml  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  main.py  metrics.py  monitoring_routes.py  routes.py  schemas.py
app/model/: features_config.json  model.joblib  predictor.py  preprocessor.joblib
dashboard/: dashboard-datathon-passos-magicos.json
data/processed/: dados_preprocessados.csv
data/raw/: BASE DE DADOS PEDE 2024 - DATATHON.xlsx
data/train/: dados_treino.csv
grafana/provisioning/dashboards/: dashboard.yml
src/: __init__.py  evaluate.py  feature_engineering.py  monitoring.py  pipeline.py  preprocessing.py  train.py  utils.py
tests/: test_api.py  test_evaluate.py  test_feature_engineering.py  test_model.py  test_monitoring.py  test_monitoring_routes.py  test_pipeline.py  test_predictor.py  test_preprocessing.py  test_utils.py
